# rust_exer

./: .gitignore  Cargo.toml
exercises/01_variables/: variables1.rs
exercises/03_controller/: run.rs
exercises/04_scope/: run_01.rs
exercises/add/: hello2.txt
exercises/add/add_one/: Cargo.toml
exercises/add/add_one/src/: lib.rs
exercises/add/adder/: Cargo.toml
exercises/add/adder/src/: guess.rs  main.rs  pair.rs  summary.rs
exercises/desk/: Cargo.toml
exercises/desk/src/: random.rs
exercises/rectangles/: Cargo.toml
exercises/rectangles/src/: enums.rs  main.rs
exercises/restaurant/: Cargo.toml
exercises/restaurant/src/: lib.rs
exercises/str_exam/: Cargo.toml
exercises/str_exam/src/: main.rs
exercises/utils/: Cargo.toml
exercises/utils/src/: generate.rs  lib.rs
src/: main.rs
utils/rust-image-processor/: Cargo.toml  build.rs  index.d.ts  index.node  package-lock.json  package.json  rust-image-processor.node
utils/rust-image-processor/src/: index.js  lib.rs  test.js
utils/serde/: Cargo.toml
web/api-gateway/: Cargo.toml  README.md
web/api-gateway/config/: default.toml
web/api-gateway/src/: main.rs
web/iam/: Cargo.toml
