[workspace]
resolver = "2"
exclude = ["tests/test_exercises", "dev"]
members = [
  "exercises/desk",
  "exercises/rectangles",
  "exercises/restaurant",
  "exercises/str_exam",
  "exercises/utils", "utils/rust-image-processor",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["berlin"]
repository = "https://github.com/Esuol/rust_exer.git"
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml_edit = { version = "0.22", default-features = false, features = [
  "parse",
  "serde",
] }

[package]
name = "rust-exer"
version = "0.1.0"
edition = "2021"

keywords = ["exercise", "learning"]
include = [
  "/src/",
  "/utils/",
  "/exercises/",
  "/solutions/",
  # A symlink to be able to include `dev/Cargo.toml` although `dev` is excluded.
  "/dev-Cargo.toml",
  "/README.md",
  "/LICENSE",
]

[dependencies]
