[package]
name = "api-gateway"
version = "0.1.1"
edition = "2021"
authors = ["berlin"]
repository = "https://github.com/Esuol/rust_exer.git"
license = "MIT"
rust-version = "1.70"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
