[package]
name = "api-gateway"
version = "0.1.1"
edition = "2021"
authors = ["berlin"]
repository = "https://github.com/Esuol/rust_exer.git"
license = "MIT"
rust-version = "1.70"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.37"                                    # 获取内存、CPU、网络等系统信息
chrono = { version = "0.4", features = ["serde"] }  # 时间处理
config = "0.15.15"
log = "0.4"
env_logger = "0.11.6"
